--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Creative Tim",
   "license": "See license in https://www.creative-tim.com/license",
   "description": "React version of Material Dashboard 2 by Creative Tim",
-  "homepage": "http://thiyagarajanshankar13.github.io/datamesh",
+  "homepage": "http://www.datamesh.directory",
   "bugs": {
     "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
   },
